--- a/package.json
+++ b/package.json
@@ -8,5 +8,18 @@
 	},
 	"keywords": [],
 	"author": "Aleksandar Lazic",
-	"license": "ISC"
+	"license": "ISC",
+	"dependencies": {
+		"bcrypt": "^5.0.1",
+		"cookie-parser": "^1.4.6",
+		"cors": "^2.8.5",
+		"express": "^4.18.1",
+		"express-validator": "^6.14.2",
+		"jsonwebtoken": "^8.5.1",
+		"mongoose": "^6.4.7",
+		"morgan": "^1.10.0"
+	},
+	"devDependencies": {
+		"nodemon": "^2.0.19"
+	}
 }
