--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
 	"description": "Basic authentication with refresh token reuse detection.",
 	"main": "server.js",
 	"scripts": {
-		"start": "nodemon server.js"
+		"start": "ts-node ./src/server.ts",
+		"start:nodemon": "./node_modules/nodemon/bin/nodemon.js"
 	},
 	"keywords": [],
 	"author": "Aleksandar Lazic",
@@ -13,13 +14,27 @@
 		"bcrypt": "^5.0.1",
 		"cookie-parser": "^1.4.6",
 		"cors": "^2.8.5",
+		"dotenv": "^16.0.1",
 		"express": "^4.18.1",
 		"express-validator": "^6.14.2",
 		"jsonwebtoken": "^8.5.1",
 		"mongoose": "^6.4.7",
-		"morgan": "^1.10.0"
+		"morgan": "^1.10.0",
+		"ts-node": "^10.9.1"
 	},
 	"devDependencies": {
-		"nodemon": "^2.0.19"
+		"@types/cookie-parser": "^1.4.3",
+		"@types/cors": "^2.8.12",
+		"@types/express": "^4.17.13",
+		"@types/morgan": "^1.9.3",
+		"@types/node": "^18.6.1",
+		"@typescript-eslint/eslint-plugin": "^5.31.0",
+		"@typescript-eslint/parser": "^5.31.0",
+		"eslint": "^8.20.0",
+		"eslint-config-prettier": "^8.5.0",
+		"eslint-plugin-prettier": "^4.2.1",
+		"nodemon": "^2.0.19",
+		"prettier": "^2.7.1",
+		"typescript": "^4.7.4"
 	}
 }
