--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
 	"description": "Basic authentication with refresh token reuse detection.",
 	"main": "server.js",
 	"scripts": {
-		"start": "ts-node ./src/server.ts",
-		"start:nodemon": "./node_modules/nodemon/bin/nodemon.js"
+		"start": "ts-node-dev --poll ./src/server.ts"
 	},
 	"keywords": [],
 	"author": "Aleksandar Lazic",
@@ -33,8 +32,8 @@
 		"eslint": "^8.20.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-prettier": "^4.2.1",
-		"nodemon": "^2.0.19",
 		"prettier": "^2.7.1",
+		"ts-node-dev": "^2.0.0",
 		"typescript": "^4.7.4"
 	}
 }
