--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
 	"description": "Basic authentication with refresh token reuse detection.",
 	"main": "server.js",
 	"scripts": {
-		"start": "ts-node-dev --poll ./src/server.ts"
+		"start": "ts-node ./src/server.ts",
+		"start:nodemon": "./node_modules/nodemon/bin/nodemon.js"
 	},
 	"keywords": [],
 	"author": "Aleksandar Lazic",
@@ -33,7 +34,6 @@
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-prettier": "^4.2.1",
 		"prettier": "^2.7.1",
-		"ts-node-dev": "^2.0.0",
 		"typescript": "^4.7.4"
 	}
 }
