--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"ts-node": "^10.9.1"
 	},
 	"devDependencies": {
+		"@types/bcrypt": "^5.0.0",
 		"@types/cookie-parser": "^1.4.3",
 		"@types/cors": "^2.8.12",
 		"@types/express": "^4.17.13",
