--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 		"@types/cookie-parser": "^1.4.3",
 		"@types/cors": "^2.8.12",
 		"@types/express": "^4.17.13",
+		"@types/jsonwebtoken": "^8.5.8",
 		"@types/morgan": "^1.9.3",
 		"@types/node": "^18.6.1",
 		"@typescript-eslint/eslint-plugin": "^5.31.0",
